# tinycthyb

./: .gitignore  README.md  test.py
python/: .cthyb.jl.swp  .main.py.swp  configuration.py  cthyb.jl  green.py  hybridization.py  main.py  segment.py  solver.py  test.py
src/: CMakeLists.txt  antisegment.hpp  configuration.hpp  green.hpp  hybridization.hpp  main.cpp  segment.hpp  solver.hpp  util.hpp
test/python/: test.py
